# Blazen

./: .gitignore  .zrunner  CHANGELOG.md  CLAUDE.md  Cargo.toml  FIXING_TYPEGENS.md  FIX_GENERICFAILURE.md  FUTURE_ROADMAP.md  GNU_ERROR.md  LICENSE  LOCAL_TTS.md  Makefile  README.md  TYPES_TODO_DELME.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  rust_out
crates/blazen-3d/: Cargo.toml
crates/blazen-3d-core/: Cargo.toml
crates/blazen-3d-core/src/: gsplat.rs  image_encoders.rs  lib.rs  marching_cubes.rs  triplane.rs
crates/blazen-3d/src/: errors.rs  lib.rs
crates/blazen-3d/src/backends/: compat.rs  mod.rs
crates/blazen-3d/src/traits/: animator.rs  mod.rs  refiner.rs  rigger.rs  texturizer.rs
crates/blazen-audio/: Cargo.toml
crates/blazen-audio-candle/: Cargo.toml
crates/blazen-audio-candle/src/: encodec.rs  error.rs  lib.rs  model.rs  musicgen.rs
crates/blazen-audio-codec/: Cargo.toml
crates/blazen-audio-codec/src/: error.rs  lib.rs  provider.rs  traits.rs
crates/blazen-audio-codec/src/backends/: dac.rs  encodec.rs  mod.rs  snac.rs
crates/blazen-audio-core/: Cargo.toml
crates/blazen-audio-core/src/: adaln.rs  dit.rs  lib.rs  rope.rs
crates/blazen-audio-dac-vendored/: Cargo.toml  VENDORED.md
crates/blazen-audio-dac-vendored/src/: lib.rs
crates/blazen-audio-music/: Cargo.toml
crates/blazen-audio-music/src/: error.rs  lib.rs  provider.rs  traits.rs
crates/blazen-audio-music/src/backends/: audiogen.rs  mod.rs  stable_audio.rs  wav.rs
crates/blazen-audio-music/tests/: stable_audio_block_compare.rs
crates/blazen-audio-piper/: Cargo.toml
crates/blazen-audio-piper-vendored/: Cargo.toml  VENDORED.md
crates/blazen-audio-piper-vendored/src/: lib.rs  model.rs  phonemize.rs
crates/blazen-audio-piper/src/: lib.rs  options.rs  provider.rs
crates/blazen-audio-tts/: Cargo.toml
crates/blazen-audio-tts/src/: error.rs  lib.rs  options.rs  provider.rs  traits.rs
crates/blazen-audio-tts/src/backends/: anytts.rs  mod.rs  openai.rs  openai_types.rs  piper.rs
crates/blazen-audio-tts/tests/: openai_smoke.rs
crates/blazen-audio-vc/: Cargo.toml
crates/blazen-audio-vc/src/: error.rs  lib.rs  traits.rs
crates/blazen-audio-vc/src/backends/: mod.rs
crates/blazen-audio-whispercpp/: Cargo.toml
crates/blazen-audio-whispercpp/src/: lib.rs  options.rs  provider.rs
crates/blazen-audio/src/: backend.rs  error.rs  lib.rs  nc_license.rs  types.rs  voice.rs
crates/blazen-cabi/: Cargo.toml  build.rs  cbindgen.toml
crates/blazen-cabi/src/: agent.rs  agent_records.rs  batch.rs  batch_records.rs  compute.rs  compute_3d.rs  compute_factories.rs  compute_music.rs  compute_records.rs  compute_requests.rs  compute_results.rs  compute_vc.rs  controlplane.rs  controlplane_records.rs  embed.rs  embedding_provider.rs  error.rs  future.rs  image.rs  init.rs  lib.rs  llm.rs  llm_provider.rs  llm_providers.rs  llm_records.rs  manager.rs  manager_records.rs  model_client.rs  music.rs  peer.rs  persist.rs  persist_factories.rs  persist_records.rs  pipeline.rs  pricing.rs  provider_api_protocol.rs  provider_base.rs  provider_custom.rs  provider_defaults.rs  providers.rs  (+16 more)
crates/blazen-cabi/tests/: compat3d_texturize.rs
crates/blazen-cli/: Cargo.toml  pyproject.toml
crates/blazen-cli/src/: main.rs
crates/blazen-cli/src/templates/: mod.rs  pipeline_python.rs  pipeline_rust.rs  pipeline_typescript.rs  prompts.rs  python.rs  rust.rs  typescript.rs
crates/blazen-controlplane/: Cargo.toml  README.md  build.rs
crates/blazen-controlplane/proto/: blazen_controlplane.proto  blazen_modelserver.proto
crates/blazen-controlplane/src/: auth.rs  client.rs  error.rs  http.rs  lib.rs  model_adapter.rs  model_protocol.rs  protocol.rs  tls.rs  worker.rs
crates/blazen-controlplane/src/client/: key_client.rs  mod.rs  model_client.rs
crates/blazen-controlplane/src/http/: blazen_admin.rs  error.rs  mod.rs  openai_compat.rs  rest_state.rs  sse.rs  (+2 more)
crates/blazen-controlplane/tests/: envelope_v2_compat.rs  event_fanout_all.rs  event_fanout_http_sse.rs  event_fanout_single_run.rs  event_status_transitions.rs  harness.rs  http_smoke.rs  input_request_round_trip.rs  integration.rs  interceptor_override.rs  place_broker.rs  place_isolation.rs  recovery_round_trip.rs  with_store_round_trip.rs
crates/blazen-core/: Cargo.toml
crates/blazen-core/src/: builder.rs  context.rs  distributed.rs  error.rs  event_loop.rs  handler.rs  lib.rs  runtime.rs  session_ref.rs  snapshot.rs  step.rs  step_registry.rs  sub_executable.rs  value.rs  workflow.rs
crates/blazen-core/tests/: builder_tests.rs  sub_executable_test.rs  subworkflow_tests.rs  workflow_integration.rs
crates/blazen-embed/: Cargo.toml
crates/blazen-embed-candle/: Cargo.toml
crates/blazen-embed-candle/src/: lib.rs  options.rs  provider.rs
crates/blazen-embed-fastembed/: Cargo.toml
crates/blazen-embed-fastembed/src/: lib.rs  options.rs  provider.rs  provider_stub.rs
crates/blazen-embed-tract/: Cargo.toml  README.md
crates/blazen-embed-tract/src/: lib.rs  options.rs  provider.rs  wasi_provider.rs  wasm_provider.rs
crates/blazen-embed/src/: lib.rs
crates/blazen-events/: Cargo.toml
crates/blazen-events/src/: lib.rs  progress_event.rs  usage_event.rs
crates/blazen-ggml-sys/: Cargo.toml  build.rs
crates/blazen-ggml-sys/src/: lib.rs
crates/blazen-image-diffusion/: Cargo.toml
crates/blazen-image-diffusion/src/: engine.rs  lib.rs  options.rs  provider.rs
crates/blazen-llm-candle/: Cargo.toml
crates/blazen-llm-candle/src/: lib.rs  lora.rs  lora_backend.rs  options.rs  provider.rs  safetensors_engine.rs
crates/blazen-llm-llamacpp/: Cargo.toml
crates/blazen-llm-llamacpp-server/: Cargo.toml
crates/blazen-llm-llamacpp-server/src/: client.rs  error.rs  lib.rs  options.rs  provider.rs
crates/blazen-llm-llamacpp-server/tests/: proxy_smoke.rs
crates/blazen-llm-llamacpp/src/: lib.rs  options.rs  provider.rs
crates/blazen-llm-lmstudio/: Cargo.toml
crates/blazen-llm-lmstudio/src/: client.rs  error.rs  lib.rs  options.rs  provider.rs
crates/blazen-llm-lmstudio/tests/: proxy_smoke.rs
(+1407 files in other folders)
