[workspace]
resolver = "2"
members = [
    "crates/blazen-events",
    "crates/blazen-macros",
    "crates/blazen-core",
    "crates/blazen-llm",
    "crates/blazen-persist",
    "crates/blazen-pipeline",
    "crates/blazen-prompts",
    "crates/blazen",
    "crates/blazen-py",
    "crates/blazen-node",
    "crates/blazen-cli",
    "crates/blazen-telemetry",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
authors = ["Zach Handley <zachhandley@gmail.com>"]
repository = "https://github.com/ZachHandley/Blazen"
rust-version = "1.85"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
serde_bytes = "0.11"

# Error handling
anyhow = "1"
thiserror = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# Schema generation (for structured LLM output)
schemars = "1"

# HTTP client (for LLM providers)
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# Concurrent collections
dashmap = "6"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Bytes
bytes = "1"

# Python bindings
pyo3 = { version = "0.28", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }

# Node.js bindings
napi = { version = "3", features = ["async", "serde-json", "tokio_rt"] }
napi-derive = "3"

# Proc macro deps
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
darling = "0.23"

# Persistence
redb = "3"
redis = { version = "1", features = ["aio", "tokio-comp", "connection-manager"] }

# Internal crates
blazen-events = { version = "0.1.0", path = "crates/blazen-events", registry = "forgejo" }
blazen-macros = { version = "0.1.0", path = "crates/blazen-macros", registry = "forgejo" }
blazen-core = { version = "0.1.0", path = "crates/blazen-core", registry = "forgejo" }
blazen-llm = { version = "0.1.0", path = "crates/blazen-llm", registry = "forgejo" }
blazen-persist = { version = "0.1.0", path = "crates/blazen-persist", registry = "forgejo" }
blazen-pipeline = { version = "0.1.0", path = "crates/blazen-pipeline", registry = "forgejo" }
blazen-prompts = { version = "0.1.0", path = "crates/blazen-prompts", registry = "forgejo" }
blazen = { version = "0.1.0", path = "crates/blazen", registry = "forgejo" }
blazen-telemetry = { version = "0.1.0", path = "crates/blazen-telemetry", registry = "forgejo" }

# Prompt/template support
serde_yaml = "0.9"
regex = "1"
indexmap = { version = "2", features = ["serde"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 3
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 2

[workspace.lints.rust]
unsafe_code = "warn"
dead_code = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
