[workspace]
resolver = "2"
members = [
    "crates/blazen-events",
    "crates/blazen-macros",
    "crates/blazen-core",
    "crates/blazen-llm",
    "crates/blazen-memory",
    "crates/blazen-memory-valkey",
    "crates/blazen-persist",
    "crates/blazen-pipeline",
    "crates/blazen-prompts",
    "crates/blazen",
    "crates/blazen-py",
    "crates/blazen-node",
    "crates/blazen-cli",
    "crates/blazen-telemetry",
    "crates/blazen-model-cache",
    "crates/blazen-embed-fastembed",
    "crates/blazen-llm-mistralrs",
    "crates/blazen-audio-whispercpp",
    "crates/blazen-embed-candle",
    "crates/blazen-image-diffusion",
    "crates/blazen-llm-candle",
    "crates/blazen-llm-llamacpp",
    "crates/blazen-audio-piper",
    "crates/blazen-peer",
    "crates/blazen-manager",
]
exclude = [
    "crates/blazen-wasm",
    "crates/blazen-wasm-sdk",
]

[workspace.package]
version = "0.0.0-dev"
edition = "2024"
license = "AGPL-3.0-or-later"
authors = ["Zach Handley <zachhandley@gmail.com>"]
repository = "https://github.com/ZachHandley/Blazen"
rust-version = "1.91"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
serde_bytes = "0.11"

# Error handling
anyhow = "1"
thiserror = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# Schema generation (for structured LLM output)
schemars = "1"

# HTTP client (for LLM providers)
reqwest = { version = "0.13", features = ["json", "stream", "query", "rustls"], default-features = false }

# Concurrent collections
dashmap = "6"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Bytes
bytes = "1"

# Encoding
base64 = "0.22"

# Python bindings
pyo3 = { version = "0.28", features = ["multiple-pymethods"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }

# Node.js bindings
napi = { version = "3", features = ["async", "serde-json", "tokio_rt"] }
napi-derive = "3"

# Proc macro deps
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
darling = "0.23"

# Persistence
redb = "3"
redis = { version = "1", features = ["aio", "tokio-comp", "connection-manager"] }

# Internal crates
blazen-events = { version = "0.0.0-dev", path = "crates/blazen-events", registry = "forgejo" }
blazen-macros = { version = "0.0.0-dev", path = "crates/blazen-macros", registry = "forgejo" }
blazen-core = { version = "0.0.0-dev", path = "crates/blazen-core", registry = "forgejo" }
blazen-llm = { version = "0.0.0-dev", path = "crates/blazen-llm", registry = "forgejo" }
blazen-memory = { version = "0.0.0-dev", path = "crates/blazen-memory", registry = "forgejo" }
blazen-memory-valkey = { version = "0.0.0-dev", path = "crates/blazen-memory-valkey", registry = "forgejo" }
blazen-persist = { version = "0.0.0-dev", path = "crates/blazen-persist", registry = "forgejo" }
blazen-pipeline = { version = "0.0.0-dev", path = "crates/blazen-pipeline", registry = "forgejo" }
blazen-prompts = { version = "0.0.0-dev", path = "crates/blazen-prompts", registry = "forgejo" }
blazen = { version = "0.0.0-dev", path = "crates/blazen", registry = "forgejo" }
blazen-telemetry = { version = "0.0.0-dev", path = "crates/blazen-telemetry", registry = "forgejo" }
blazen-model-cache = { version = "0.0.0-dev", path = "crates/blazen-model-cache", registry = "forgejo" }
blazen-embed-fastembed = { version = "0.0.0-dev", path = "crates/blazen-embed-fastembed", registry = "forgejo" }
blazen-llm-mistralrs = { version = "0.0.0-dev", path = "crates/blazen-llm-mistralrs", registry = "forgejo" }
blazen-audio-whispercpp = { version = "0.0.0-dev", path = "crates/blazen-audio-whispercpp", registry = "forgejo" }
blazen-embed-candle = { version = "0.0.0-dev", path = "crates/blazen-embed-candle", registry = "forgejo" }
blazen-image-diffusion = { version = "0.0.0-dev", path = "crates/blazen-image-diffusion", registry = "forgejo" }
blazen-llm-candle = { version = "0.0.0-dev", path = "crates/blazen-llm-candle", registry = "forgejo" }
blazen-llm-llamacpp = { version = "0.0.0-dev", path = "crates/blazen-llm-llamacpp", registry = "forgejo" }
blazen-audio-piper = { version = "0.0.0-dev", path = "crates/blazen-audio-piper", registry = "forgejo" }
blazen-peer = { version = "0.0.0-dev", path = "crates/blazen-peer", registry = "forgejo" }
blazen-manager = { version = "0.0.0-dev", path = "crates/blazen-manager", registry = "forgejo" }

# Distributed peer transport
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
tonic-prost-build = "0.14"
postcard = { version = "1.1", features = ["alloc"] }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
tokio-rustls = "0.26"

# Prompt/template support
serde_yaml = "0.9"
regex = "1"
indexmap = { version = "2", features = ["serde"] }

# Model caching / download
hf-hub = { version = "0.4", default-features = false }

# Candle ML framework (local inference)
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
tokenizers = "0.21"

# Local embedding via ONNX Runtime
fastembed = "5"
sha2 = "0.10"
dirs = "6"

# Testing
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 3
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 2

[workspace.lints.rust]
unsafe_code = "warn"
dead_code = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
