[workspace]
resolver = "2"
members = [
    "crates/blazen-events",
    "crates/blazen-macros",
    "crates/blazen-core",
    "crates/blazen-llm",
    "crates/blazen-memory",
    "crates/blazen-memory-valkey",
    "crates/blazen-persist",
    "crates/blazen-pipeline",
    "crates/blazen-prompts",
    "crates/blazen",
    "crates/blazen-py",
    "crates/blazen-node",
    "crates/blazen-uniffi",
    "crates/blazen-cabi",
    "crates/blazen-cli",
    "crates/blazen-telemetry",
    "crates/blazen-model-cache",
    "crates/blazen-embed",
    "crates/blazen-embed-fastembed",
    "crates/blazen-embed-tract",
    "crates/blazen-llm-mistralrs",
    "crates/blazen-embed-candle",
    "crates/blazen-image-diffusion",
    "crates/blazen-llm-candle",
    "crates/blazen-llm-llamacpp",
    "crates/blazen-audio-tts",
    "crates/blazen-audio-vc",
    "crates/blazen-peer",
    "crates/blazen-controlplane",
    "crates/blazen-manager",
    "crates/blazen-train",
    "crates/blazen-llm-vllm",
    "crates/blazen-audio",
    "crates/blazen-audio-codec",
    "crates/blazen-audio-core",
    "crates/blazen-audio-music",
    "crates/blazen-audio-stt",
    "crates/blazen-audio-piper-vendored",
    "crates/blazen-audio-dac-vendored",
    "crates/blazen-train-tune",
    "crates/blazen-llm-ollama",
    "crates/blazen-llm-llamacpp-server",
    "crates/blazen-llm-tgi",
    "crates/blazen-llm-lmstudio",
    "crates/blazen-3d",
    "crates/blazen-3d-core",
    "crates/blazen-video-core",
    "crates/blazen-ggml-sys", "crates/blazen-resource-probe",
]
# NOTE: The three -sys forks (blazen-whisper-sys, blazen-diffusion-sys,
# blazen-llama-cpp-sys-2) are intentionally NOT workspace members.
# They're consumed via `[patch.crates-io]` only — making them members
# would cause `cargo --workspace --all-features` to activate every
# upstream feature (openblas, cuda, hipblas, intel-sycl, ...) which
# requires platform-specific toolchains the CI hosts don't carry.
# Their build paths are still cargo-checked because the consumer crates
# (blazen-llm-llamacpp, blazen-audio-stt, blazen-image-diffusion) pull
# them in via the patched dep edge.
exclude = [
    "crates/blazen-wasm",
    "crates/blazen-wasm-sdk",
    "crates/blazen-workers-alias",
    "crates/blazen-workers-tiktoken-alias",
]

[workspace.package]
version = "0.0.0-dev"
edition = "2024"
license = "MPL-2.0"
authors = ["Zach Handley <zachhandley@gmail.com>"]
repository = "https://github.com/ZachHandley/Blazen"
rust-version = "1.91"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
serde_bytes = "0.11"

# Error handling
anyhow = "1"
thiserror = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", default-features = false, features = ["sync"] }
tokio-util = { version = "0.7", default-features = false }
futures-util = "0.3"
futures-core = "0.3"
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# Schema generation (for structured LLM output)
schemars = "1"

# HTTP client (for LLM providers)
reqwest = { version = "0.13", features = ["json", "stream", "query", "rustls"], default-features = false }

# Concurrent collections
dashmap = "6"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Bytes
bytes = "1"

# Encoding
base64 = "0.22"

# Magic-number / file-type detection (used by blazen-llm content store).
infer = { version = "0.19", default-features = false }

# Python bindings
pyo3 = { version = "0.28", features = ["multiple-pymethods", "abi3-py310"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }

# Node.js bindings
napi = { version = "3", features = ["async", "napi6", "serde-json", "tokio_rt"] }
napi-derive = "3"

# Multi-language bindings via Mozilla UniFFI (Go, Swift, Kotlin, Ruby).
# Pinned to 0.31.0 because NordSecurity/uniffi-bindgen-go 0.7.1+v0.31.0
# targets exactly that uniffi-rs version. Updating uniffi requires bumping
# all four bindgen tools in lockstep.
uniffi = { version = "0.31", features = ["tokio"] }
uniffi_build = "0.31"

# Proc macro deps
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
darling = "0.23"

# Persistence
redb = "4"
redis = { version = "1", features = ["aio", "tokio-comp", "connection-manager"] }

# Internal crates
blazen-events = { version = "0.0.0-dev", path = "crates/blazen-events", registry = "forgejo" }
blazen-macros = { version = "0.0.0-dev", path = "crates/blazen-macros", registry = "forgejo" }
blazen-core = { version = "0.0.0-dev", path = "crates/blazen-core", registry = "forgejo" }
blazen-llm = { version = "0.0.0-dev", path = "crates/blazen-llm", registry = "forgejo" }
blazen-memory = { version = "0.0.0-dev", path = "crates/blazen-memory", registry = "forgejo" }
blazen-memory-valkey = { version = "0.0.0-dev", path = "crates/blazen-memory-valkey", registry = "forgejo" }
blazen-persist = { version = "0.0.0-dev", path = "crates/blazen-persist", registry = "forgejo" }
blazen-pipeline = { version = "0.0.0-dev", path = "crates/blazen-pipeline", registry = "forgejo" }
blazen-prompts = { version = "0.0.0-dev", path = "crates/blazen-prompts", registry = "forgejo" }
blazen-telemetry = { version = "0.0.0-dev", path = "crates/blazen-telemetry", registry = "forgejo" }
blazen-model-cache = { version = "0.0.0-dev", path = "crates/blazen-model-cache", registry = "forgejo" }
blazen-embed = { version = "0.0.0-dev", path = "crates/blazen-embed", registry = "forgejo" }
blazen-embed-fastembed = { version = "0.0.0-dev", path = "crates/blazen-embed-fastembed", registry = "forgejo" }
blazen-embed-tract = { version = "0.0.0-dev", path = "crates/blazen-embed-tract", registry = "forgejo" }
blazen-llm-mistralrs = { version = "0.0.0-dev", path = "crates/blazen-llm-mistralrs", registry = "forgejo" }
blazen-audio = { version = "0.0.0-dev", path = "crates/blazen-audio", registry = "forgejo" }
blazen-embed-candle = { version = "0.0.0-dev", path = "crates/blazen-embed-candle", registry = "forgejo" }
blazen-image-diffusion = { version = "0.0.0-dev", path = "crates/blazen-image-diffusion", registry = "forgejo" }
blazen-llm-candle = { version = "0.0.0-dev", path = "crates/blazen-llm-candle", registry = "forgejo" }
blazen-llm-llamacpp = { version = "0.0.0-dev", path = "crates/blazen-llm-llamacpp", registry = "forgejo" }
blazen-llm-vllm = { version = "0.0.0-dev", path = "crates/blazen-llm-vllm", registry = "forgejo" }
blazen-llm-ollama = { version = "0.0.0-dev", path = "crates/blazen-llm-ollama", registry = "forgejo" }
blazen-llm-llamacpp-server = { version = "0.0.0-dev", path = "crates/blazen-llm-llamacpp-server", registry = "forgejo" }
blazen-llm-tgi = { version = "0.0.0-dev", path = "crates/blazen-llm-tgi", registry = "forgejo" }
blazen-llm-lmstudio = { version = "0.0.0-dev", path = "crates/blazen-llm-lmstudio", registry = "forgejo" }
blazen-audio-tts = { version = "0.0.0-dev", path = "crates/blazen-audio-tts", registry = "forgejo" }
blazen-audio-piper-vendored = { version = "0.0.0-dev", path = "crates/blazen-audio-piper-vendored", registry = "forgejo" }
blazen-audio-dac-vendored = { version = "0.0.0-dev", path = "crates/blazen-audio-dac-vendored", registry = "forgejo" }
blazen-audio-stt = { version = "0.0.0-dev", path = "crates/blazen-audio-stt", registry = "forgejo" }
blazen-audio-music = { version = "0.0.0-dev", path = "crates/blazen-audio-music", registry = "forgejo" }
blazen-audio-codec = { version = "0.0.0-dev", path = "crates/blazen-audio-codec", registry = "forgejo" }
blazen-audio-core = { version = "0.0.0-dev", path = "crates/blazen-audio-core", registry = "forgejo" }
blazen-audio-vc = { version = "0.0.0-dev", path = "crates/blazen-audio-vc", registry = "forgejo" }
blazen-peer = { version = "0.0.0-dev", path = "crates/blazen-peer", registry = "forgejo" }
blazen-controlplane = { version = "0.0.0-dev", path = "crates/blazen-controlplane", registry = "forgejo", default-features = false }
blazen-manager = { version = "0.0.0-dev", path = "crates/blazen-manager", registry = "forgejo" }
blazen-train = { version = "0.0.0-dev", path = "crates/blazen-train", registry = "forgejo" }
blazen-resource-probe = { version = "0.0.0-dev", path = "crates/blazen-resource-probe", registry = "forgejo" }

# Distributed peer transport
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
tonic-prost-build = "0.14"
postcard = { version = "1.1", features = ["alloc"] }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
tokio-rustls = "0.26"

# Prompt/template support
serde_yml = "0.0.12"
regex = "1"
indexmap = { version = "2", features = ["serde"] }

# Model caching / download
hf-hub = { version = "0.5", default-features = false }

# Candle ML framework (local inference)
candle-core = "0.10"
candle-nn = "0.10"
candle-transformers = "0.10"
# default-features = false disables `esaxx_fast`, which pulls esaxx-rs/cpp.
# esaxx-rs's build.rs hardcodes `.static_crt(true)` → /MT objects that clash
# with the rest of the build graph (cc-rs default /MD, pyke ort-sys prebuilt
# /MD). Strict linkers (lld-link) hard-error on the mismatch; real link.exe
# tolerates it but mixing CRTs in one DLL is fragile. The pure-Rust fallback
# only affects Unigram tokenizer init perf, not tokenization runtime.
tokenizers = { version = "0.23", default-features = false, features = ["onig", "progressbar"] }

# Local embedding via ONNX Runtime
fastembed = "5"
sha2 = "0.11"
dirs = "6"

# Pure-Rust ONNX inference (for musl and other targets ORT doesn't ship)
tract-onnx = "0.22"
ndarray = "0.17"

# Testing
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 3
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 2

[workspace.lints.rust]
unsafe_code = "warn"
dead_code = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[patch.crates-io]
# Vendored napi 3.9.0 with three workerd/V8 compatibility patches:
#   1. `set_async_executor` hook in src/tokio_runtime.rs — lets blazen-node's
#      wasi_async dispatcher bypass napi-rs's hardcoded
#      `std::thread::spawn(|| block_on(...))`, which traps on Cloudflare
#      workerd's WASI runtime.
#   2. `napi_get_undefined` → `napi_get_null` for the `this` binding in
#      src/bindgen_runtime/js_values/function.rs — avoids `Illegal invocation`
#      brand-check failures on workerd/V8 when JS callbacks invoke host-bound
#      methods.
#   3. Same `napi_get_undefined` → `napi_get_null` change in
#      src/threadsafe_function.rs for the threadsafe-function callback path.
# Run `diff -u <upstream-3.9.0>/src/<file> crates/napi-patched/src/<file>` to
# see the exact patches. These are upstream-PR-able and should be replaced
# with the upstream version when napi-rs accepts them.
napi = { path = "crates/napi-patched" }

# Blazen fork of whisper-rs-sys 0.15.0 that adds a `system-ggml` feature.
# When enabled (via the workspace's blazen-audio-stt feature graph), the
# fork's build.rs sets `WHISPER_USE_SYSTEM_GGML=ON` + `CMAKE_PREFIX_PATH=
# $DEP_GGML_PREFIX` so whisper.cpp's cmake calls `find_package(ggml
# REQUIRED)` against the blazen-ggml-sys install instead of building its
# own in-tree ggml. Kills one of the three ggml duplications that the
# `-Wl,--allow-multiple-definition` band-aid in bindings/go/cgo_link.go
# papers over.
whisper-rs-sys = { path = "crates/blazen-whisper-sys" }

# Blazen fork of diffusion-rs-sys 0.1.19. Same surgery as the
# whisper-rs-sys fork above: adds a `system-ggml` cargo feature whose
# build.rs sets `SD_USE_SYSTEM_GGML=ON` + `CMAKE_PREFIX_PATH=
# $DEP_GGML_PREFIX` and skips the historic `cargo:rustc-link-lib=
# static=ggml*` emit so stable-diffusion.cpp's cmake build picks up
# blazen-ggml-sys's install tree instead of compiling its own in-tree
# ggml. Second of three ggml duplications eliminated.
diffusion-rs-sys = { path = "crates/blazen-diffusion-sys" }

# Blazen fork of llama-cpp-sys-2 0.1.146. Upstream already exposes a
# `system-ggml` cargo feature that toggles `LLAMA_USE_SYSTEM_GGML=ON` in
# its cmake invocation, but does NOT auto-set `CMAKE_PREFIX_PATH` from a
# DEP_GGML_PREFIX env var — so upstream-as-is wouldn't find our
# blazen-ggml-sys install tree. The fork adds three lines to build.rs
# (around the existing `system-ggml` branch) that read DEP_GGML_PREFIX
# and pass it as CMAKE_PREFIX_PATH alongside LLAMA_USE_SYSTEM_GGML=ON.
# Cargo.toml: makes `system-ggml` pull in `dep:blazen-ggml-sys`. Third of
# three ggml duplications eliminated.
llama-cpp-sys-2 = { path = "crates/blazen-llama-cpp-sys-2" }

# Blazen patch of esaxx-rs 0.1.10. Upstream's build.rs hardcodes
# `.static_crt(true)` (/MT) on both linux+windows and macOS arms.
# Rust's MSVC default for cdylib targets is /MD, as is the pyke ort-sys
# prebuilt and every cmake-driven -sys crate. The hardcoded /MT was
# producing LNK2038 'RuntimeLibrary' mismatch on Windows MSVC for every
# cdylib consumer of tokenizers' `esaxx_fast` feature (transitively via
# ct2rs / fastembed-rs / candle-core's tokenizers default-features). The
# patch simply drops the `.static_crt(true)` calls so cc-rs honors
# CARGO_CFG_TARGET_FEATURE crt-static like every other cc-rs crate.
# See vendor/esaxx-rs/build.rs.
esaxx-rs = { path = "vendor/esaxx-rs" }
