[project]
name = "blazen-workspace"
version = "0.0.0-dev"
description = "Blazen workspace"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
authors = [{ name = "Zach Handley", email = "zachhandley@gmail.com" }]
dependencies = ["blazen"]

[tool.uv.workspace]
members = ["crates/blazen-py"]

[tool.uv.sources]
blazen = { workspace = true }

[dependency-groups]
dev = [
    "maturin>=1.0",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
asyncio_mode = "auto"
markers = [
    "timeout: set test timeout (requires pytest-timeout)",
]

[tool.uv.scripts]
test = "pytest tests/python/ -v"
"test:smoke" = "pytest tests/python/test_llm_smoke.py tests/python/test_fal_smoke.py tests/python/test_capabilities_smoke.py tests/python/test_provider_smoke.py -v"
"test:smoke:compute" = "pytest tests/python/test_fal_compute_smoke.py -v"
"test:smoke:all" = "pytest tests/python/ -v"
