[project]
name = "blazen-workspace"
version = "0.0.0-dev"
description = "Blazen workspace"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
authors = [{ name = "Zach Handley", email = "zachhandley@gmail.com" }]
dependencies = ["blazen"]

[tool.uv.workspace]
members = ["crates/blazen-py"]

[tool.uv.sources]
blazen = { workspace = true }

[dependency-groups]
dev = [
    "maturin>=1.0",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-xdist>=3.0",
    "pytest-timeout>=2.0",
    "ruff>=0.1",
]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
asyncio_mode = "auto"
timeout = 120
addopts = "--basetemp=.pytest_tmp"
markers = [
    "timeout: set test timeout (requires pytest-timeout)",
    "compute: fal compute tests (image/TTS/music/transcribe/3D/bg-removal/run/submit); opt in via BLAZEN_TEST_FAL_COMPUTE=1",
    "video: fal text-to-video tests (slow, ~6+ min); opt in via BLAZEN_TEST_FAL_VIDEO=1",
]

