[package]
name = "blazen-3d"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Multi-backend 3D-pipeline crate for Blazen (texturizer, rigger, refiner, animator capability traits)"

[dependencies]
async-trait.workspace = true
blazen-core = { version = "0.0.0-dev", path = "../blazen-core" }
futures-core.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true

[features]
default = []
# `compat-proxy` will gate the future `Compat3dProvider` HTTP-proxy backend
# at `src/backends/compat.rs`. Empty for now — the module exists but holds
# no implementation until Wave B.
compat-proxy = []

[lints]
workspace = true

[dev-dependencies]
serde_json.workspace = true
