[package]
name = "blazen-3d"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Multi-backend 3D-pipeline crate for Blazen (texturizer, rigger, refiner, animator capability traits)"

[dependencies]
async-trait.workspace = true
base64 = { workspace = true, optional = true }
futures-core.workspace = true
reqwest = { workspace = true, features = ["multipart"], optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
thiserror.workspace = true

[features]
default = []
# `compat-proxy` enables the `Compat3dProvider` HTTP-proxy backend at
# `src/backends/compat.rs`. The backend POSTs multipart requests to a
# configurable upstream and decodes base64-wrapped binary responses, so
# enabling it pulls in `reqwest` (with the `multipart` feature) and
# `base64`.
compat-proxy = ["dep:reqwest", "dep:base64", "dep:serde_json"]

[lints]
workspace = true

[dev-dependencies]
mockito = "1.7.2"
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
