[package]
name = "blazen-audio-candle"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
candle-core = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }
candle-transformers = { workspace = true, optional = true }
hf-hub = { workspace = true, features = ["ureq"], optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true

[features]
default = []
# Pull in the candle inference engine + HF hub model fetcher. Without this
# feature the crate compiles to a thin no-op layer that surfaces every
# generate_* call as `BlazenError::Unsupported`.
engine = [
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:hf-hub",
]
# CUDA acceleration. Requires the host to have the CUDA toolkit installed
# and a GPU with compute capability >= 7.0. Implies `engine`.
cuda = [
    "engine",
    "candle-core/cuda",
    "candle-nn/cuda",
    "candle-transformers/cuda",
]
# Apple Metal acceleration. The candle 0.10 `metal` feature is currently a
# best-effort flag — candle-nn / candle-transformers do not yet expose a
# `metal` cargo feature themselves, so we only flip `engine` and let
# candle-core's Metal backend kick in via `Device::new_metal`. Implies `engine`.
metal = ["engine"]
